[gd_scene load_steps=4 format=3 uid="uid://cobw22uuoivg0"]

[ext_resource type="Script" path="res://scenes/ping_pong/Game.gd" id="1_nnoeu"]
[ext_resource type="Script" path="res://scenes/ping_pong/PlayerScene.gd" id="2_7teqf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w83hj"]
size = Vector2(20, 320)

[node name="Game" type="Node2D"]
script = ExtResource("1_nnoeu")
isPlay = true

[node name="Player" type="Area2D" parent="."]
script = ExtResource("2_7teqf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 150)
shape = SubResource("RectangleShape2D_w83hj")
debug_color = Color(1, 1, 1, 1)

[node name="PlayerScore" type="Node2D" parent="."]

[node name="Label" type="Label" parent="PlayerScore"]
offset_left = 33.0
offset_top = 24.0
offset_right = 73.0
offset_bottom = 47.0
text = "0"

[node name="AIScore" type="Node2D" parent="."]

[node name="Label2" type="Label" parent="AIScore"]
offset_left = 414.0
offset_top = 23.0
offset_right = 454.0
offset_bottom = 46.0
text = "0"

[node name="Timer" type="Node2D" parent="."]

[node name="TimeLabel" type="Label" parent="Timer"]
offset_left = 227.0
offset_top = 22.0
offset_right = 267.0
offset_bottom = 45.0
text = "0"

[node name="GeneticInfo" type="Node2D" parent="."]

[node name="Generation" type="Label" parent="GeneticInfo"]
offset_left = 31.0
offset_top = 244.0
offset_right = 71.0
offset_bottom = 267.0
text = "Generation: 0"

[node name="BestRating" type="Label" parent="GeneticInfo"]
offset_left = 31.0
offset_top = 269.0
offset_right = 71.0
offset_bottom = 292.0
text = "Best Rating: 0"

[connection signal="area_entered" from="Player" to="Player" method="_on_area_entered"]
